--- a/CampusHub/Components/Layout/AdminLayout.razor
+++ b/CampusHub/Components/Layout/AdminLayout.razor
@@ -39,7 +39,7 @@
                         </li>
                         <li>
                             <a href="/admin/reports" class="@GetNavLinkClass("/admin/reports")">
-                                <i class="far fa-flag text-[14px]"></i>
+                                <i class="fas fa-flag text-[14px]"></i>
                                 Reports
                             </a>
                         </li>
