--- a/CampusHub/Components/Pages/AdminEvents.razor
+++ b/CampusHub/Components/Pages/AdminEvents.razor
@@ -1,7 +1,11 @@
 ﻿@page "/admin/events"
 @layout Layout.AdminLayout
 @using CampusHub.Application.DTO
-@using CampusHub.Application.DTOs
+@using CampusHub.Application.DTO.Marketplace
+@using CampusHub.Application.DTO.User
+@using CampusHub.Application.DTO.Common
+@using CampusHub.Application.DTO.Events
+@using CampusHub.Application.DTO.Admin
 @using CampusHub.Domain.Entities
 @inject HttpClient Http
 @inject IJSRuntime JSRuntime
