--- a/CampusHub/Components/Pages/AdminMarketplaceManagement.razor
+++ b/CampusHub/Components/Pages/AdminMarketplaceManagement.razor
@@ -2,6 +2,8 @@
 @layout Layout.AdminLayout
 @rendermode InteractiveServer
 @using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Admin
+@using CampusHub.Application.DTO.Marketplace
 @using CampusHub.Application.Interfaces
 @using CampusHub.Domain.Entities
 @using CurrieTechnologies.Razor.SweetAlert2
