--- a/CampusHub/Components/Pages/Events.razor
+++ b/CampusHub/Components/Pages/Events.razor
@@ -1,6 +1,7 @@
 ﻿@page "/events"
 @layout Layout.MainLayout
-@using CampusHub.Application.DTOs
+@using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Events
 @using CampusHub.Domain.Entities
 @using CurrieTechnologies.Razor.SweetAlert2
 @inject HttpClient Http
