--- a/CampusHub/Components/Pages/Login.razor
+++ b/CampusHub/Components/Pages/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @page "/"
 @using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Common
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
