--- a/CampusHub/Components/Pages/MainMarketplace.razor
+++ b/CampusHub/Components/Pages/MainMarketplace.razor
@@ -1,9 +1,11 @@
 ﻿@page "/main-marketplace"
 @layout Layout.MainLayout
-@using CampusHub.Application.DTO
-@using CampusHub.Domain.Entities
-@using System.Text.Json
 @using System.Text
+@using System.Text.Json
+@using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Marketplace
+@using CampusHub.Application.DTO.User
+@using CampusHub.Domain.Entities
 @using CurrieTechnologies.Razor.SweetAlert2
 @inject HttpClient HttpClient
 @inject NavigationManager Navigation
