--- a/CampusHub/Components/Pages/PostListing.razor
+++ b/CampusHub/Components/Pages/PostListing.razor
@@ -1,6 +1,7 @@
 ﻿@page "/post-listing"
 @layout Layout.MainLayout
 @using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Marketplace
 @using CampusHub.Application.Interfaces
 @using CampusHub.Domain.Entities
 @inject IMarketplaceService MarketplaceService
