--- a/CampusHub/Components/Pages/Registration.razor
+++ b/CampusHub/Components/Pages/Registration.razor
@@ -4,6 +4,9 @@
 @inject IUserService UserService
 @inject NavigationManager Navigation
 @using CampusHub.Application.DTO
+@using CampusHub.Application.DTO.Common
+@using CampusHub.Application.DTO.Marketplace
+@using CampusHub.Application.DTO.User
 @using CampusHub.Application.Interfaces
 
 <div class="login-container">
