--- a/CampusHub/Components/App.razor
+++ b/CampusHub/Components/App.razor
@@ -6,12 +6,10 @@
     <base href="/" />
     <title>University Of Caloocan City - Campus Hub</title>
 
-
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <ImportMap />
     <HeadOutlet @rendermode="@RenderMode.InteractiveServer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
 </head>
 <body>
     <Routes @rendermode="@RenderMode.InteractiveServer" />
@@ -20,5 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
+    <script src="/js/adminDashboardCharts.js"></script>
 </body>
 </html>
